# ai-workroot

./: .gitignore  AGENTS.md  AUTHOR.md  CHANGELOG.md  CONTRIBUTING.md  DCO.md  NOTICE  PROJECT_BRIEF.md  README.md  ROADMAP.md  START_HERE_FOR_HUMANS.md  TRADEMARKS.md  pyproject.toml  workroot.project.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: DOCUMENTATION_POLICY.md  ai-workspace-operating-system-design.md  architecture-map.md  architecture.md  daily-loop.md  extension-contract.md  founding-intention.md  good-first-issues.md  instantiate-workroot.md  kernel-implementation-specification.md  launch-and-discovery.md  positioning-qna.md  product-experience.md  product-hardening.md  project-philosophy.md  release-checklist.md  scaling-and-longevity.md  user-interaction-contract.md  user-sop.md  who-we-are-looking-for.md  workroot-operating-protocol.md  workroot-system-design.md
install/: README.md
scripts/: README.md  add_registry_row.py  bootstrap-dev.ps1  bootstrap-dev.sh  install.ps1  install.sh  list_tasks.py  new_task.py  rebuild_sqlite.py  setup_workroot.py  test_new_task.py  update_usage_direction.py  upgrade_workroot.py  validate_kernel.py  workroot_agent_entry.py  workroot_bootstrap.py  workroot_candidates.py  workroot_cli.py  workroot_client.py  workroot_context.py  workroot_doctor.py  workroot_indexing.py  workroot_migrations.py  workroot_operation_manifest.py  workroot_paths.py  workroot_sqlite.py  workroot_state.py
space/: README.md
tests/: README.md  __init__.py  test_0529_release_gates.py  test_add_registry_row.py  test_agent_fast_start.py  (+25 more)
(+645 files in other folders)
