[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workroot"
version = "0.9.530"
description = "Personal local-first AI Workroot foundation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "AI Workroot Contributors" }
]
dependencies = []

[project.scripts]
workroot = "ai_workroot.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_workroot.resources.templates.native_agent_entry" = ["*.template"]
